Added a new slide.

--- a/index.html
+++ b/index.html
@@ -90,8 +90,14 @@ $('.new-group-reg').live('blur', function ()
 				<img src="images/set-up-new-profile.png" alt="Screen shot of setting up a new profile in Google Analytics.">
 			</div>
 
-			<!-- slide 12 -->
-			<div class="step" data-z="-12500" data-rotate-y="180">
+			<!-- slide-12 -->
+			<div class="step" id="include-filter" data-z="-25000" data-rotate-y="180">
+				<h2>Set Up Include Filter</h2>
+				<img src="images/set-up-include-filter.png" alt="Screen shot of setting up a new profile in Google Analytics.">
+			</div>
+
+			<!-- slide 13 -->
+			<div class="step" id="flow-report" data-z="-12500" data-rotate-y="180">
 				<h2>Goal Flow Report</h2>
 				<a href="images/goal-flow-report.png"><img src="images/goal-flow-report.png" alt="Sample of Goal Flow Report in Google Analytics."></a>
 			</div>
