--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="stylesheet" href="css/normalize/normalize.css" type="text/css" media="all">
 		<link rel="stylesheet" href="js/highlight/highlight.css" type="text/css" media="all">
 		<link rel="stylesheet" href="css/styles.css" type="text/css" media="all">
-		<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<link href='//fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	</head>
 	<body>
 		<div id="impress">
